--- a/webapp/client/lib/main.css
+++ b/webapp/client/lib/main.css
@@ -6,3 +6,8 @@ html, body, #react-root, .monish {
     padding: 3px;
     border: solid black 1px;
 }
+
+.map-container {
+    width: 100%;
+    height: 100%;
+}
