--- a/webapp/client/lib/main.css
+++ b/webapp/client/lib/main.css
@@ -1,13 +1,32 @@
 html, body, #react-root, .monish {
     height: 100%;
 }
+
+html {
+    font-size: 80px;
+}
 .line {
-    height: 25%;
+    height: calc(25% - 23px);
     padding: 3px;
     border: solid black 1px;
+    font-size: 310px;
+    text-align: center;
 }
 
 .map-container {
     width: 100%;
     height: 100%;
+}
+
+.monish .title {
+    text-align: center;
+    height: 110px;
+}
+
+.direction {
+    width: 50%;
+    float: left;
+    text-align: center;
+    height: 100%;
+    margin: auto;
 }
